--- a/cnn_network.ipynb
+++ b/cnn_network.ipynb
@@ -397,6 +397,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "<class 'list'>\nTest score: 0.04188541992254322\nTest score accuracy: 0.9864000082015991\n"
+    }
+   ],
+   "source": [
+    "score = model.evaluate(X_test, y_test, verbose=0)\n",
+    "print(type(score))\n",
+    "print('Test score:', score[0])\n",
+    "print('Test score accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
